Fixing minor layout bug

--- a/toastoffice/style.css
+++ b/toastoffice/style.css
@@ -63,7 +63,7 @@ a:hover {
 }
 
 section {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
